--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env.development
+.env.production
 .env.local
 .env.development.local
 .env.test.local
