--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.0.0",
     "dotenv-load": "^2.0.0",
     "framer-motion": "^3.1.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "marked": "^1.2.7",
     "next": "10.0.3",
     "next-env": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "sass": "^1.30.0"
   }
 }
