--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ya-next",
+  "name": "ya-magazine",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export -o ./dist"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
