Update Settings “site”

--- a/cms/site-settings.json
+++ b/cms/site-settings.json
@@ -1,7 +1,8 @@
 {
-  "base_url": "https://next-bulma-landingpage.now.sh/",
+  "instagram_account": "ya.magz",
   "site_title": "Ya! Magazine",
-  "site_description": "Website Education and Entertainment",
+  "twitter_account": "@ya.magz",
+  "base_url": "https://ya-magazine.vercel.app/",
   "site_keywords": [
     {
       "keyword": "Ya! Magazine"
@@ -13,11 +14,9 @@
       "keyword": "Edutainment Magazine"
     }
   ],
-  "posts_per_page": 9,
-  "twitter_account": "@ya.magz",
+  "site_description": "Website Education and Entertainment",
   "facebook_account": "Ya Magazine",
-  "instagram_account": "ya.magz",
-  "contact_email": "ya.magazine@gmail.com",
+  "contact_address": "Bursa, Turkey",
   "contact_phonenumber": "+905531775123",
-  "contact_address": "Bursa, Turkey"
+  "contact_email": "ya.magazine@gmail.com"
 }
