--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,6 +35,13 @@ collections:
               label: Keyword
               name: keyword
               widget: 'string'
+          - label: 'Posts per page'
+            name: 'posts_per_page'
+            widget: 'number'
+            value_type: 'int'
+            min: 1
+            max: 30
+            default: 9
           - label: 'Twitter account'
             name: 'twitter_account'
             widget: 'string'
@@ -99,6 +106,51 @@ collections:
                 name: 'name'
                 widget: 'string'
                 hint: 'Tag name for displaying on the site'
+  - name: 'team_members'
+    label: 'Team Members'
+    delete: false
+    editor:
+      preview: false
+    files:
+      - name: 'team_members'
+        label: 'Team members'
+        file: 'cms/meta/team_members.json'
+        description: 'List of Ya! Magazine Team Members'
+        fields:
+          - name: members
+            label: Members
+            label_singular: 'Member'
+            widget: list
+            fields:
+              - label: 'Slug'
+                name: 'slug'
+                widget: 'string'
+                hint: 'The part of a URL identifies the team members'
+              - label: 'Name'
+                name: 'name'
+                widget: 'string'
+                hint: 'Full name'
+              - label: 'Avatar'
+                name: 'avatar'
+                widget: 'image'
+                allow_multiple: false
+              - label: 'Id'
+                name: 'id'
+                widget: 'string'
+                hint: 'Unique Id'
+              - label: 'Role'
+                name: 'role'
+                widget: 'string'
+                hint: 'His/her role in the team'
+              - label: 'Social Media'
+                name: 'social_media'
+                widget: 'list'
+                summary: { { field. } }
+                fields:
+                  - { label: Instagram, name: instagram, widget: string }
+                  - { label: Twitter, name: twitter, widget: string }
+                  - { label: Email, name: email, widget: string }
+                  - { label: Wesbite, name: website, widget: string }
 
   - name: 'posts'
     label: 'Blog Posts'
