add google analytics

--- a/cms/site-settings.json
+++ b/cms/site-settings.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://ya-magazine.netlify.app/",
+  "base_url": "https://ya-magazine.vercel.app/",
   "site_title": "Ya! Magazine",
   "site_keywords": [
     {
