--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-instagram-embed": "^2.0.0",
     "react-intersection-observer": "^8.31.0",
     "react-schemaorg": "^1.3.1",
+    "react-share": "^4.3.1",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.0",
     "sass": "^1.30.0"
