change nav button for read and articles

--- a/cms/site-settings.json
+++ b/cms/site-settings.json
@@ -14,7 +14,7 @@
       "keyword": "Edutainment Magazine"
     }
   ],
-  "site_description": "Website Education and Entertainment",
+  "site_description": "Ya! Magazine is a Media News company. We share stories at the intersection of entertainment, education and lifestyle.",
   "facebook_account": "Ya Magazine",
   "contact_address": "Bursa, Turkey",
   "contact_phonenumber": "+905050280533",
