--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export -o ./dist"
+    "export": "next build && next export -o ./dist",
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@mapbox/rehype-prism": "^0.5.0",
     "@next/mdx": "^10.0.5",
     "date-fns": "^2.16.1",
     "framer-motion": "^3.1.1",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "next": "10.0.3",
-    "next-env": "^1.1.1",
     "next-mdx-remote": "^2.1.3",
     "next-seo": "^4.17.0",
+    "next-sitemap": "^1.5.6",
     "nextjs-redirect": "^5.0.0",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
