--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["src/components/*"],
+      "@/assets/*": ["src/assets/*"],
       "@/lib/*": ["src/lib/*"],
       "@/styles/*": ["styles/*"],
       "@/cms/*": ["cms/*"]
