--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
@@ -31,8 +32,9 @@
     "react-intersection-observer": "^8.31.0",
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
-    "react-twitter-embed": "^3.0.3",
-    "react-youtube": "^7.13.0",
     "sass": "^1.30.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0"
   }
 }
