--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,15 +6,15 @@ public_folder: /images
 publish_mode: editorial_workflow
 
 collections:
-  - name: 'meta'
-    label: 'Tags'
+  - name: 'articlemeta'
+    label: 'Article Meta'
     delete: false
     editor:
       preview: false
     files:
       - name: 'authors'
         label: 'Authors'
-        file: 'cms/meta/authors.json'
+        file: 'cms/authors.json'
         description: 'Author descriptions'
         fields:
           - name: authors
@@ -35,7 +35,7 @@ collections:
                 widget: 'text'
       - name: 'tags'
         label: 'Tags'
-        file: 'cms/meta/tags.json'
+        file: 'cms/tags.json'
         description: 'List of tags'
         fields:
           - name: tags
@@ -51,24 +51,6 @@ collections:
                 name: 'name'
                 widget: 'string'
                 hint: 'Tag name for displaying on the site'
-      - name: 'teams'
-        label: 'Teams'
-        file: 'cms/meta/teams.json'
-        description: 'List of Teams division in Ya!'
-        fields:
-          - name: tags
-            label: Tags
-            label_singular: 'Tag'
-            widget: list
-            fields:
-              - label: 'Id'
-                name: 'id'
-                widget: 'number'
-                hint: 'Team id'
-              - label: 'Name'
-                name: 'name'
-                widget: 'string'
-                hint: 'Name of the team'
   - name: 'team_members'
     label: 'Team Members'
     delete: false
@@ -77,9 +59,27 @@ collections:
     files:
       - name: 'team_members'
         label: 'Team members'
-        file: 'cms/meta/team_members.json'
+        file: 'cms/team_members.json'
         description: 'List of Ya! Magazine Team Members'
         fields:
+          - name: 'teams'
+            label: 'Teams'
+            file: 'cms/teams.json'
+            description: 'List of Teams division in Ya!'
+            fields:
+              - name: teams
+                label: Teams
+                label_singular: 'Team'
+                widget: list
+                fields:
+                  - label: 'Id'
+                    name: 'id'
+                    widget: 'number'
+                    hint: 'Team id'
+                  - label: 'Name'
+                    name: 'name'
+                    widget: 'string'
+                    hint: 'Name of the division. ex: Website'
           - name: members
             label: Members
             label_singular: 'Member'
@@ -100,7 +100,7 @@ collections:
               - label: Team
                 name: 'team'
                 widget: relation
-                collection: 'meta'
+                collection: 'articlemeta'
                 file: 'teams'
                 searchFields:
                   - 'teams.*.name'
@@ -110,20 +110,23 @@ collections:
               - label: 'Social Media'
                 name: 'social_media'
                 widget: 'list'
+                summary: '{{fields.platorm}}'
                 fields:
-                  - { label: Instagram, name: instagram, widget: string }
-                  - { label: Twitter, name: twitter, widget: string }
-                  - { label: Facebook, name: facebook, widget: string }
-                  - { label: Email, name: email, widget: string }
                   - {
-                      label: Website,
-                      hint: 'Personal Website etc',
-                      name: website,
+                      label: platform,
+                      name: platform,
                       widget: string,
+                      hint: 'ex: Instagram',
+                    }
+                  - {
+                      label: identifier,
+                      name: identifier,
+                      widget: string,
+                      hint: 'ex: @johndoe',
                     }
   - name: 'articles'
     label: 'Articles'
-    folder: '/data/posts'
+    folder: '/posts'
     extension: 'mdx'
     format: 'frontmatter'
     create: true
@@ -160,7 +163,7 @@ collections:
       - label: Author
         name: 'author'
         widget: relation
-        collection: 'meta'
+        collection: 'articlemeta'
         file: 'authors'
         searchFields:
           - 'authors.*.name'
@@ -176,7 +179,7 @@ collections:
           label: Tag
           name: tag
           widget: relation
-          collection: 'meta'
+          collection: 'articlemeta'
           file: 'post-tags'
           search_fields:
             - 'tags.*.name'
@@ -194,7 +197,7 @@ collections:
     files:
       - name: 'gallery'
         label: 'Gallery'
-        file: 'cms/meta/gallery.json'
+        file: 'cms/gallery.json'
         description: 'Photos from Indorsagraphy'
         fields:
           - name: photos
