add social media icons in meet-the-team page

--- a/cms/site-settings.json
+++ b/cms/site-settings.json
@@ -2,7 +2,7 @@
   "instagram_account": "ya.magz",
   "site_title": "Ya! Magazine",
   "twitter_account": "@ya.magz",
-  "base_url": "https://ya-magazine.netlify.app",
+  "base_url": "https://ya-magazine.com",
   "site_keywords": [
     {
       "keyword": "Ya! Magazine"
