--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.30.0"
   },
   "devDependencies": {
-    "eslint": "^7.20.0"
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
