--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -33,24 +33,25 @@ collections:
               - label: 'Introduction'
                 name: 'introduction'
                 widget: 'text'
-      - name: 'tags'
-        label: 'Tags'
-        file: 'cms/tags.json'
-        description: 'List of tags'
-        fields:
-          - name: tags
-            label: Tags
+          - name: 'tags'
+            label: 'Tags'
             label_singular: 'Tag'
-            widget: list
+            file: 'cms/tags.json'
+            description: 'List of tags'
             fields:
-              - label: 'Slug'
-                name: 'slug'
-                widget: 'string'
-                hint: 'The part of a URL identifies the tag'
-              - label: 'Display Name'
-                name: 'name'
-                widget: 'string'
-                hint: 'Tag name for displaying on the site'
+              - name: tags
+                label: Tags
+                label_singular: 'Tag'
+                widget: list
+                fields:
+                  - label: 'Slug'
+                    name: 'slug'
+                    widget: 'string'
+                    hint: 'The part of a URL identifies the tag'
+                  - label: 'Display Name'
+                    name: 'name'
+                    widget: 'string'
+                    hint: 'Tag name for displaying on the site'
   - name: 'team_members'
     label: 'Team Members'
     delete: false
@@ -80,50 +81,35 @@ collections:
                     name: 'name'
                     widget: 'string'
                     hint: 'Name of the division. ex: Website'
-          - name: members
-            label: Members
-            label_singular: 'Member'
-            widget: list
-            fields:
-              - label: 'Name'
-                name: 'name'
-                widget: 'string'
-                hint: 'Full name'
-              - label: 'Profile Photo'
-                name: 'photo'
-                widget: 'string'
-                hint: 'Link to the photo'
-              - label: 'Team'
-                name: 'team'
-                widget: 'string'
-                hint: 'Part of which team'
-              - label: Team
-                name: 'team'
-                widget: relation
-                collection: 'articlemeta'
-                file: 'teams'
-                searchFields:
-                  - 'teams.*.name'
-                displayFields:
-                  - 'teams.*.name'
-                valueField: 'teams.*.name'
-              - label: 'Social Media'
-                name: 'social_media'
-                widget: 'list'
-                summary: '{{fields.platorm}}'
-                fields:
-                  - {
-                      label: platform,
-                      name: platform,
-                      widget: string,
-                      hint: 'ex: Instagram',
-                    }
-                  - {
-                      label: identifier,
-                      name: identifier,
-                      widget: string,
-                      hint: 'ex: @johndoe',
-                    }
+                  - name: 'members'
+                    label: 'Members'
+                    widget: 'list'
+                    fields:
+                      - label: 'Name'
+                        name: 'name'
+                        widget: 'string'
+                        hint: 'Full name'
+                      - label: 'Profile Photo'
+                        name: 'photo'
+                        widget: 'string'
+                        hint: 'Link to the photo'
+                      - label: 'Role'
+                        name: 'role'
+                        hint: 'Role ex: CEO'
+                        widget: 'string'
+                      - label: 'Social Media'
+                        name: 'social_media'
+                        widget: 'list'
+                        summary: '{{fields.platorm}}'
+                        fields:
+                          - label: 'platform',
+                            name: 'platform',
+                            widget: 'string',
+                            hint: 'ex: Instagram',
+                          - label: 'identifier',
+                            name: 'identifier',
+                            widget: 'string',
+                            hint: 'ex: @johndoe',
   - name: 'articles'
     label: 'Articles'
     folder: '/posts'
@@ -160,9 +146,9 @@ collections:
         format: 'YYYY-MM-DD'
         date_format: 'YYYY-MM-DD'
         time_format: false
-      - label: Author
+      - label: 'Author'
         name: 'author'
-        widget: relation
+        widget: 'relation'
         collection: 'articlemeta'
         file: 'authors'
         searchFields:
@@ -170,15 +156,15 @@ collections:
         displayFields:
           - 'authors.*.name'
         valueField: 'authors.*.slug'
-      - label: Tags
+      - label: 'Tags'
         label_singular: 'Tag'
         name: 'tags'
         widget: list
         summary: '{{fields.tag}}'
         field:
-          label: Tag
-          name: tag
-          widget: relation
+          label: 'Tag'
+          name: 'tag'
+          widget: 'relation'
           collection: 'articlemeta'
           file: 'post-tags'
           search_fields:
