--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "next": "10.0.3",
+    "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
     "next-seo": "^4.17.0",
     "next-sitemap": "^1.5.6",
