--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -144,6 +144,9 @@ collections:
         name: 'featuredimageurl'
         widget: 'string'
         hint: 'Link to the image online'
+      - label: 'Photo source'
+        name: 'imgsource'
+        widget: 'string'
       - label: 'Publish Date'
         name: 'date'
         widget: 'datetime'
