--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-instagram-embed": "^2.0.0",
     "react-intersection-observer": "^8.31.0",
     "react-schemaorg": "^1.3.1",
