--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^3.1.1",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
+    "mongoose": "^5.12.10",
     "next": "10.0.3",
     "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
@@ -34,7 +35,8 @@
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
