--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.2.0",
     "react-instagram-embed": "^2.0.0",
     "react-intersection-observer": "^8.31.0",
+    "react-pdf": "^5.3.0",
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
