change authors layout

--- a/cms/authors.yml
+++ b/cms/authors.yml
@@ -21,16 +21,16 @@ authors:
     name: Aisyah Dhianisa
   - slug: aksara-gedrik
     name: Aksara Gedrik
-  - slug: Annisa Firdaus
-    name: annfir
-  - slug: Jovita Yosandra
-    name: jovita-yosandra
+  - slug: annfir
+    name: Annisa Firdaus
+  - slug: jovita-yosandra
+    name: Jovita Yosandra
   - slug: ghoniyyah-salma
     name: Ghoniyyah Salma
   - slug: himura-taiyou
     name: Himura Taiyou
   - slug: bayu-adji-nugraha
-    name: Bayu Adji Nugrah
+    name: Bayu Adji Nugraha
   - slug: amara-salsabila
     name: Amara Salsabila
   - slug: kupat-sayur
