--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@fontsource/montserrat": "^4.4.5",
     "@next/mdx": "^10.0.5",
     "boring-avatars": "^1.5.3",
     "date-fns": "^2.16.1",
