--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fontsource/montserrat": "^4.4.5",
     "@next/mdx": "^10.0.5",
     "boring-avatars": "^1.5.3",
+    "browserslist": "^4.16.5",
     "date-fns": "^2.16.1",
+    "elliptic": "^6.5.4",
     "framer-motion": "^3.1.1",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
@@ -29,6 +31,7 @@
     "next-sitemap": "^1.5.6",
     "nextjs-redirect": "^5.0.0",
     "nprogress": "^0.2.0",
+    "postcss": "^8.2.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
@@ -39,7 +42,8 @@
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
     "sass": "^1.30.0",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "trim": "^0.0.3"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
