--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@next/mdx": "^10.0.5",
     "boring-avatars": "^1.5.3",
     "browserslist": "^4.16.5",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.22.1",
     "elliptic": "^6.5.4",
-    "framer-motion": "^3.1.1",
+    "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "mongoose": "^5.12.10",
-    "next": "10.0.3",
+    "next": "^11.0.1",
+    "next-auth": "^3.27.0",
     "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
     "next-seo": "^4.17.0",
