--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.png",
-      "sizes": "64x64",
+      "src": "/meta/android-chrome-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/meta/logo-512.png",
+      "src": "/meta/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
