--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "mongoose": "^5.12.10",
-    "next": "10.0.3",
+    "next": "^11.0.1",
     "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
     "next-seo": "^4.17.0",
