--- a/cms/tags.yml
+++ b/cms/tags.yml
@@ -7,6 +7,8 @@ tags:
     name: Lifehacks
   - slug: lifestyle
     name: Lifestyle
+  - slug: news
+    name: News
   - slug: opini
     name: Opini
   - slug: plesiran
