--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^3.27.0",
     "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
+    "next-pwa": "^5.2.21",
     "next-seo": "^4.17.0",
     "next-sitemap": "^1.5.6",
     "nextjs-redirect": "^5.0.0",
