update mood v5 add images intersection observer

--- a/cms/site-settings.json
+++ b/cms/site-settings.json
@@ -21,5 +21,5 @@
   "contact_email": "ya.magazine@gmail.com",
   "posts_per_page": 9,
   "podcast_cover_url": "https://res.cloudinary.com/yacloud/image/upload/v1614332851/ya-pod_gi1tmm.jpg",
-  "mood_cover_url": "https://res.cloudinary.com/yacloud/image/upload/v1614332851/mood-1_wjumv8.jpg"
+  "mood_cover_url": "/images/mood/v5/mood-v5-cover.jpg"
 }
