--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export -o ./dist",
-    "postbuild": "next-sitemap --config next-sitemap.config.js"
+    "export": "next build && next export -o ./dist"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
@@ -15,36 +14,27 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@fontsource/montserrat": "^4.4.5",
-    "@next/mdx": "^10.0.5",
     "boring-avatars": "^1.5.3",
-    "browserslist": "^4.16.5",
     "date-fns": "^2.22.1",
-    "elliptic": "^6.5.4",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
+    "keen-slider": "^5.5.1",
     "mongoose": "^5.12.10",
     "next": "^11.0.1",
     "next-auth": "^3.27.0",
-    "next-google-fonts": "^2.0.0",
     "next-mdx-remote": "^2.1.3",
     "next-pwa": "^5.2.21",
-    "next-seo": "^4.17.0",
-    "next-sitemap": "^1.5.6",
     "nextjs-redirect": "^5.0.0",
     "nprogress": "^0.2.0",
-    "postcss": "^8.2.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "react-instagram-embed": "^2.0.0",
     "react-intersection-observer": "^8.31.0",
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
-    "sass": "^1.30.0",
-    "swr": "^0.5.6",
-    "trim": "^0.0.3"
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
