--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "js-yaml": "^4.0.0",
     "keen-slider": "^5.5.1",
     "mongoose": "^5.12.10",
     "next": "^11.0.1",
     "next-auth": "^3.27.0",
+    "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^2.1.3",
+    "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.2.21",
     "nextjs-redirect": "^5.0.0",
     "nprogress": "^0.2.0",
