--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next start -o ./dist"
+    "export": "next build && next start"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
