--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@fontsource/montserrat": "^4.4.5",
+    "bad-words": "^3.0.4",
     "boring-avatars": "^1.5.3",
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
@@ -22,7 +23,6 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^9.0.0",
     "js-yaml": "^4.0.0",
-    "keen-slider": "^5.5.1",
     "mongoose": "^5.12.10",
     "next": "^11.0.1",
     "next-auth": "^3.27.0",
@@ -39,7 +39,9 @@
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "swr": "^0.5.6",
+    "washyourmouthoutwithsoap": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
