--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@fontsource/montserrat": "^4.4.5",
+    "axios": "^0.21.1",
     "bad-words": "^3.0.4",
     "boring-avatars": "^1.5.3",
     "date-fns": "^2.22.1",
