--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
     "reading-time": "^1.3.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "sass": "^1.35.1",
     "swr": "^0.5.6",
     "washyourmouthoutwithsoap": "^1.0.2"
